[workspace]
resolver = "3"
members = [
    "crates/adkg",
    "crates/adkg-cli",
    "crates/network",
    "crates/blocklock-weft",
    "crates/blocklock-warp",
    "crates/fulfiller-core",
    "crates/payment-warp",
    "crates/randomness-warp",
    "crates/dsigner",
    "crates/network",
    "crates/omnievent",
    "crates/onlyswaps-verifier",
    "crates/randomness-weft",
    "crates/signer",
    "crates/superalloy",
    "crates/contracts-core",
    "crates/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# workspace crates
adkg = { path = "./crates/adkg" }
contracts-core = { path = "./crates/contracts-core" }
fulfiller-core = { path = "./crates/fulfiller-core" }
payment-warp = { path = "./crates/payment-warp" }
randomness-warp = { path = "./crates/randomness-warp" }
blocklock-warp = { path = "./crates/blocklock-warp" }
dcipher-signer = { path = "./crates/signer" }
dcipher-network = { path = "./crates/network" }
superalloy = { path = "./crates/superalloy" }

# blockchain
alloy = { version = "1.0", default-features = false }

# crypto
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-std = "0.4.0"
utils = { path = "./crates/utils", features = ["bn254"] }

# hashes
digest = "0.10"
sha3 = "0.10"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = "1.44"
tokio-stream = "0.1"
tokio-util = "0.7"

# logs / metrics
prometheus = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

# network
libp2p = { version = "0.55", features = ["serde"] }

# api / rpc
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }

# serde
prost = { version = "0.13" }
prost-build = { version = "0.13" }
prost-types = { version = "0.13" }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
serde_cbor = "0.11"

# storage
sqlx = { version = "0.8" }

# misc
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10" }
hex = "0.4"
itertools = "0.14"
rand = "0.8.0"
thiserror = "2.0"

[patch.crates-io]
# Use custom patch to fix arkworks' FieldHasher
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher"}
