[workspace]
resolver = "3"
members = [
    "bin/*",
    "crates/adkg",
    "crates/adkg-cli",
    "crates/config",
    "crates/network",
    "crates/utils",
    "dcipher-agents",
    "dsigner",
    "generated",
    "omnievent",
    "signer",
    "superalloy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# workspace crates
adkg = { path = "./crates/adkg" }
config = { path = "./crates/config" }
dcipher-agents = { path = "./dcipher-agents" }
dcipher-signer = { path = "./signer" }
dcipher-network = { path = "./crates/network" }
generated = { path = "./generated" }
omnievent = { path = "./omnievent" }
superalloy = { path = "./superalloy" }

# blockchain
alloy = { version = "1.0.32", features = ["sol-types"] }

# crypto
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
chacha20poly1305 = "0.10"
utils = { path = "./crates/utils", features = ["bn254", "bls12-381"] }

# hashes
digest = "0.10"
sha2 = "0.10"
sha3 = "0.10"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = "1.44"
tokio-stream = "0.1"
tokio-util = "0.7"

# logs / metrics
prometheus = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }

# network
libp2p = { version = "0.55", features = ["serde"] }

# api / rpc
axum = "0.8"
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }

# serde
bson = "2.11.0"
prost = { version = "0.13" }
prost-types = { version = "0.13" }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_with = "3.14"
serde_json = "1.0"
serde_cbor = "0.11"
toml = "0.9"

# storage
sqlx = { version = "0.8" }

# misc
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
either = "1.15"
figment = { version = "0.10" }
hex = "0.4"
humantime = "2.2"
itertools = "0.14"
rand = "0.8.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"

[patch.crates-io]
# Use custom patch to fix arkworks' FieldHasher
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher-v0.5.0" }
libp2p-floodsub = { git = "https://github.com/azixus/rust-libp2p", branch = "fix/floodsub-msg-size" }
