[package]
name = "blocklock-agent"
version.workspace = true
edition.workspace = true

[dependencies]
# blockchain
alloy = { workspace = true, features = ["default", "provider-ws"] }
dcipher-agents = { workspace = true, features = ["blocklock"] }

# async
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

# logs / metrics
tracing = { workspace = true }
prometheus = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }

# misc
anyhow = { workspace = true }
serde-keys.workspace = true

[dev-dependencies]
# blockchain
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
superalloy = { workspace = true }

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
utils.workspace = true

# async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal", "io-std", "time"] }
tokio-util = { workspace = true }

# logs / metrics
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# network
dcipher-network = { workspace = true, features = ["libp2p", "metrics"] }
libp2p = { workspace = true, features = ["serde"] }

# serde
serde_json = { workspace = true }

# misc
clap = { workspace = true }
base64 = { workspace = true }
figment = { workspace = true, features = ["toml"] }
warp = "0.3.7"
