[package]
name = "dcipher-agents"
version.workspace = true
edition.workspace = true

[features]
rayon = ["dep:rayon"]

[dependencies]
alloy = { workspace = true, features = ["default", "provider-ws"] }

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
pairing_utils = { workspace = true }

# hashes
digest = { workspace = true }
sha3 = { workspace = true }

# async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true }

# logs / metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# network
libp2p = { workspace = true, features = ["tcp", "dns", "noise", "tokio", "ping", "yamux", "macros", "floodsub", "serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_cbor = "0.10"

# misc
itertools = { workspace = true }
thiserror = { workspace = true }
lru = "0.14"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
hex = { workspace = true }
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
