[package]
name = "dcipher-agents"
version.workspace = true
edition.workspace = true

[features]
# agents
agents = ["evm"]
blocklock = ["agents", "decryption_sender", "payment"]
randomness = ["agents", "signature_sender", "payment"]
payment = []

# schemes
decryption_sender = ["fulfiller", "ibe", "evm"]
signature_sender = ["fulfiller", "evm"]
ibe = []

# signing
bn254 = ["dcipher-signer/bn254"]
signer = ["dep:dcipher-signer"]

# misc
evm = ["dep:alloy"]
fulfiller = ["signer"]
rayon = ["dcipher-signer/rayon"]

[dependencies]
# workspace crates
dcipher-signer = { workspace = true, optional = true }

alloy = { workspace = true, features = ["default", "provider-ws"], optional = true}

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
utils = { workspace = true }

# hashes
digest = { workspace = true }
sha3 = { workspace = true }

# async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true }

# logs / metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }

# misc
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
