[package]
name = "dsigner"
version = "0.1.0"
edition = "2024"

[dependencies]
dcipher-agents = { path = "../dcipher-agents" }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
clap = { version = "4.5", features = ["derive", "env"] }
libp2p = { version = "0.55", features = ["serde"] }
pairing_utils = { path = "../marshmallow-crypto/pairing_utils" }
tokio-util = "0.7"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "signal", "io-std", "time"] }
base64 = "0.22.1"
figment = { version = "0.10.19", features = ["toml"] }
axum = "0.8.3"
hex = "0.4.3"

# Use custom patch to fix arkworks' FieldHasher
[patch.crates-io]
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher"}
