[package]
name = "dsigner"
version.workspace = true
edition.workspace = true

[features]
client = []
server = []
grpc-server = ["server"]

[dependencies]
dcipher-signer = { workspace = true, features = ["bls12-381", "bn254", "sha3", "sha2"] }
dcipher-network = { workspace = true, features = ["libp2p", "metrics", "in_memory"] }

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
utils = { workspace = true }

# async
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal", "io-std", "time"] }
tokio-util = { workspace = true }

# logs / metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# network
libp2p = { workspace = true }

# api / rpc
axum = "0.8"
tonic.workspace = true
tower-http = { version = "0.6", features = ["trace"] }

# serde
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true }
toml.workspace = true

# misc
anyhow = { workspace = true }
base64 = { workspace = true }
bytes.workspace = true
clap = { workspace = true }
figment = { workspace = true, features = ["toml", "env"] }
hex = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
ark-bn254.workspace = true
ark-bls12-381.workspace = true
either = { workspace = true, features = ["serde"] }
itertools.workspace = true
utils = { workspace = true, features = ["bn254"] }

[build-dependencies]
tonic-build.workspace = true

[[example]]
name = "dsigner_grpc"
required-features = ["grpc-server"]

[[example]]
name = "dsigner_legacy_http"
required-features = ["server"]
