[package]
name = "dsigner"
version.workspace = true
edition.workspace = true

[dependencies]
dcipher-agents = { workspace = true, features = ["signer", "rayon"] }
dcipher-network = { workspace = true, features = ["libp2p", "metrics"] }

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
utils = { workspace = true }

# async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal", "io-std", "time"] }
tokio-util = { workspace = true }

# logs / metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# network
axum = "0.8"
libp2p = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }

# serde
serde = { workspace = true }

# misc
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
figment = { workspace = true, features = ["toml"] }
hex = { workspace = true }
serde_keys.workspace =  true
