[package]
name = "omnievent"
version.workspace = true
edition.workspace = true

[features]
timings = []

[dependencies]
alloy = { workspace = true, features = ["default", "provider-ws"] }
superalloy.workspace = true

# async
futures.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true
tokio-util.workspace = true

# logs / metrics
tracing.workspace = true
prometheus.workspace = true

# api / rpc
tonic = { version = "0.13" }

# serde
prost.workspace = true
prost-types.workspace = true

# misc
bytes.workspace = true
chrono.workspace = true
itertools.workspace = true
thiserror.workspace = true
uuid = { version = "1.0", features = ["v5"] }

[dev-dependencies]
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }

[build-dependencies]
tonic-build.workspace = true
