[package]
name = "onlyswaps-verifier"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = ["default", "provider-ws"] }
anyhow.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
async-trait.workspace = true
axum = "0.8.4"
clap = { workspace = true, features = ["derive", "env"] }
config.workspace = true
dcipher-network = { workspace = true, features = ["libp2p", "transports", "replayable", "in_memory", "reader"] }
dcipher-signer = { workspace = true, features = ["rayon", "bn254", "sha3"] }
futures.workspace = true
libp2p.workspace = true
omnievent.workspace = true
superalloy.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

[dev-dependencies]
speculoos = "0.13.0"
