[package]
name = "randomness-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# blockchain
alloy = { workspace = true, features = ["default", "provider-ws"] }
dcipher-agents = { workspace = true }

# async
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

# logs / metrics
tracing = { workspace = true }
prometheus = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }

# misc
anyhow = { workspace = true }

[dev-dependencies]
# blockchain
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
superalloy = { workspace = true }

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
pairing_utils = { path = "../marshmallow-crypto/pairing_utils" }

# async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "signal", "io-std", "time"] }
tokio-util = { workspace = true }

# logs / metrics
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# network
libp2p = { workspace = true, features = ["serde"] }

# serde
serde_json = { workspace = true }

# misc
clap = { workspace = true }
base64 = { workspace = true }
figment = { workspace = true, features = ["toml"] }
warp = "0.3.7"
