[package]
name = "dcipher-signer"
version.workspace = true
edition.workspace = true

[features]
bls = ["dsigner"]
bls12-381 = ["bls", "dep:ark-bls12-381", "utils/bls12-381"]
bn254 = ["bls", "dep:ark-bn254", "utils/bn254"]

sha2 = ["dep:sha2"]
sha3 = ["dep:sha3", "utils/sha3"]

dsigner = ["dep:prost", "dep:bytes"]
rayon = ["dep:rayon"]

[dependencies]
dcipher-network.workspace = true

# crypto
ark-bn254 = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
utils = { workspace = true }

# hashes
digest.workspace = true
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }

# async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true }

# logs / metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_cbor.workspace = true
serde_with.workspace = true
prost = { workspace = true, features = ["derive"], optional = true }

# misc
bytes = { workspace = true, features = ["serde"], optional = true }
either = "1.15"
itertools = { workspace = true }
thiserror = { workspace = true }
lru = "0.14"
rayon = { version = "1.10", optional = true }
strum.workspace = true

[dev-dependencies]
dcipher-network = { workspace = true, features = ["libp2p", "in_memory"] }
