[package]
name = "superalloy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12", features = ["default", "provider-ws"] }
thiserror = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures-util = "0.3.30"
futures = "0.3.31"
