[package]
name = "dcipher-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
pairing_utils = { path = "../../marshmallow-crypto/pairing_utils" }
alloy = { version = "0.12", features = ["default", "provider-ws"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
thiserror = "1.0"
tracing = "0.1.41"
futures-util = "0.3"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
sha3 = "0.10"
ark-std = "0.4.0"
digest = "0.10"
itertools = "0.14"
serde = { version = "1.0.219", features = ["derive"] }
libp2p = { version = "0.55", features = ["tcp", "dns", "noise", "tokio", "ping", "yamux", "macros", "floodsub", "serde"] }
lru = "0.14"
serde_cbor = "0.10"

[dev-dependencies]
hex = "0.4"
alloy = { version = "0.12", features = ["default", "provider-ws", "provider-anvil-node"] }

# Use custom patch to fix arkworks' FieldHasher
[patch.crates-io]
ark-ff = { git = 'https://github.com/azixus/algebra', branch = "fix/fieldHasher"}
