[package]
name = "adkg"
version = "0.1.0"
edition = "2024"

[features]
bn254 = ["scheme", "dep:ark-bn254"]
scheme = []

[dependencies]
dcipher-network.workspace = true

ark-bn254 = { version = "0.4.0", optional = true }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-std = "0.4.0"
async-trait = "0.1.82"
bson = "2.11.0"
chacha20poly1305 = "0.10.1"
digest = { version = "0.10.7", features = ["core-api"] }
hkdf = "0.12"
itertools = "0.13.0"
utils.workspace = true
rand = "0.8"
rand_chacha = "0.3.1"
reed-solomon = "0.2.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11"
sha3 = "0.10"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-util = "0.7"
futures = "0.3"

[dev-dependencies]
dcipher-network = { workspace = true, features = ["in_memory"] }

ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
utils = { workspace = true, features = ["bls12-381", "bn254", "sha3"] }
sha2 = "0.10"
rayon = "1.0"
