[package]
name = "adkg"
version = "0.1.0"
edition = "2024"

[features]
bn254 = ["scheme", "dep:ark-bn254"]
scheme = []

[dependencies]
dcipher-network.workspace = true

ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
async-trait = "0.1.82"
bson = "2.11.0"
chacha20poly1305 = "0.10.1"
digest = { workspace = true, features = ["core-api"] }
hkdf = "0.12"
itertools.workspace = true
utils.workspace = true
rand.workspace = true
rand_chacha = "0.3"
reed-solomon = "0.2.1"
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
sha3.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-util.workspace = true
futures.workspace = true

[dev-dependencies]
dcipher-network = { workspace = true, features = ["in_memory"] }

ark-bn254.workspace = true
ark-bls12-381.workspace = true
utils = { workspace = true, features = ["bls12-381", "bn254", "sha3"] }
sha2 = "0.10"
rayon = "1.0"
