[package]
name = "adkg"
version = "0.1.0"
edition = "2024"

[features]
bn254 = ["scheme", "dep:ark-bn254"]
bls12-381 = ["scheme", "dep:ark-bls12-381", "dep:sha2"]
scheme = []

[dependencies]
dcipher-network.workspace = true

ark-bn254 = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
async-trait.workspace = true
bson.workspace = true
chacha20poly1305.workspace = true
digest = { workspace = true, features = ["core-api"] }
hkdf = "0.12"
itertools.workspace = true
nalgebra = "0.33"
utils.workspace = true
rand.workspace = true
rand_chacha = "0.3"
reed-solomon = "0.2.1"
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
sha2 = { workspace = true, optional = true}
sha3.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-util.workspace = true
futures.workspace = true

[dev-dependencies]
dcipher-network = { workspace = true, features = ["in_memory"] }

ark-bn254.workspace = true
ark-bls12-381.workspace = true
utils = { workspace = true, features = ["bls12-381", "bn254", "sha3"] }
rayon = "1.0"
