[package]
name = "blocklock-warp"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
# workspace crates
contracts-core = { path = "../contracts-core", features = ["blocklock"] }
fulfiller-core = { path = "../fulfiller-core", features = ["decryption_sender", "fulfiller", "blocklock"] }
payment-warp = { path = "../payment-warp" }
alloy = { workspace = true, features = ["default", "provider-ws"] }

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
utils = { workspace = true }

# hashes
digest = { workspace = true }
sha3 = { workspace = true }

# async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true }

# logs / metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# serde
serde = { version = "1.0", features = ["derive"] }

# misc
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
