[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ark-bn254.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
figment = { workspace = true, features = ["toml", "json"] }
libp2p.workspace = true
serde.workspace = true
serde-keys.workspace = true
shellexpand = "3.1.1"
utils.workspace = true
serde_json.workspace = true


