[package]
name = "contracts-core"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
sha3 = { workspace = true }
digest = { workspace = true }
utils = { workspace = true }
dcipher-signer = { workspace = true, optional = true }

# logs / metrics
tracing = { workspace = true }
# misc
thiserror = { workspace = true }


[features]
default = []
blocklock = []
signer = ["dep:dcipher-signer"]
testing = []

[dev-dependencies]
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
hex = { workspace = true }
