[package]
name = "enc-core"
version.workspace = true
edition.workspace = true

[features]
# schemes
decryption_sender = ["fulfiller", "ibe", "evm"]
signature_sender = ["fulfiller", "evm"]
blocklock = []


ibe = []

# misc
evm = ["dep:alloy"]
fulfiller = ["signer"]
signer = ["dep:dcipher-signer", "dcipher-signer/rayon"]
rayon = []

[dependencies]
# workspace crates
dcipher-signer = { workspace = true, optional = true }

alloy = { workspace = true, features = ["default", "provider-ws"], optional = true}

# crypto
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
pairing_utils = { workspace = true }

# hashes
digest = { workspace = true }
sha3 = { workspace = true }

# async
futures-util = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true }

# logs / metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }

# misc
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
alloy = { workspace = true, features = ["default", "provider-ws", "provider-anvil-node"] }
